--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,6 +15,8 @@
         </div>
     </main>
 </body>
-<script src="/client.js"></script>
+<script src="bundle.js"></script>
+
+<!-- <script  src="/client.js"></script> -->
 
 </html>
